--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.0",
     "debug": "^4.3.4",
     "express": "^4.18.1",
+    "guid": "^0.0.12",
     "http": "^0.0.1-security",
     "mongoose": "^6.3.5"
   },
