--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.1",
     "guid": "^0.0.12",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "mongoose": "^6.3.5"
   },
   "devDependencies": {
